--- a/index.html
+++ b/index.html
@@ -1,36 +1,3 @@
-How are you ? 
-<h2>How are you?????????????</h2>
-
-kadsljdslksadlfjldsdsafa
-Hello 
-Namaste 
-
-dslkfjdslfjlkd
-sdafdsf
-fsdsflksjl
-safdsadfds
-fasdfdssa
-asdfasds
-sadlkfdsjflsa
-sadfljlklkkjsadf
-asdfasdjlkkk
-salfdkjlkds
-aaaaaaaaaa
-sadfjlkjlljadskf
-safdsafssfsa
-adfassf
-
-aaaaaaaaaaaaaa
-<h4>How was your day? </h4>
-aaaaaaaaaaaaa
-<h2>Hello world in main branch</h2>
-aaaaaaaaaaaaaaaa
-aaaaaaaaaaaaaaa
-<h1>this is index.html file from veera branch </h1>
-
-
-<h3>This isChkang from Hello branch .............</h3>
-Hlello sd
-
-
-aaaaaaaaaaaaaaaaaaaaaaa
+Hello world 
+Hello world 
+Hello world
